# cod

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  composer.json  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
app/Enums/: Gender.php
app/Http/Controllers/: AuthController.php  DashboardController.php  SocialiteController.php
app/Http/Middleware/: HandleInertiaRequests.php
app/Models/: Account.php  User.php
config/: services.php
database/migrations/: 2024_12_29_121000_create_users_table.php  2024_12_29_121020_create_accounts_table.php
resources/css/: app.css
resources/js/: app.js  app.ts
resources/js/Layouts/: GuestLayout.svelte
resources/js/components/: NavBar.svelte
resources/views/: app.blade.php
routes/: web.php
src/: app.css  app.html
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2025-02-11-091750_create_currencies/: down.sql  up.sql
src-tauri/migrations/2025-02-11-091751_create_users/: down.sql  up.sql
src-tauri/migrations/2025-02-11-091805_create_accounts/: down.sql  up.sql
src-tauri/migrations/2025-02-11-091805_create_wallets/: down.sql  up.sql
src-tauri/migrations/2025-02-11-091814_create_categories/: down.sql  up.sql
src-tauri/migrations/2025-02-11-091814_create_tags/: down.sql  up.sql
src-tauri/migrations/2025-02-11-091816_create_transactions/: down.sql  up.sql
src-tauri/migrations/2025-02-11-091817_create_transactions_categories/: down.sql  up.sql
src-tauri/migrations/2025-02-11-091817_create_transactions_tags/: down.sql  up.sql
src-tauri/migrations/2025-02-11-091826_create_limits/: down.sql  up.sql
src-tauri/migrations/2025-02-11-091827_create_accounts_limits/: down.sql  up.sql
src-tauri/migrations/2025-02-11-091827_create_wallets_limits/: down.sql  up.sql
src-tauri/src/: constant.rs  event.rs  events.rs  global.rs  lib.rs  main.rs  setup.rs  state.rs  utils.rs
src-tauri/src/api/: mod.rs  user_endpoint.rs
src-tauri/src/commands/: account_commands.rs  mod.rs  user_commands.rs
src-tauri/src/database/: enums.rs  mod.rs  models.rs  schema.rs
src-tauri/src/database/models/: account.rs  currency.rs  limit.rs  mod.rs  tag.rs  transaction.rs  user.rs
src-tauri/src/database/queries/: account_query.rs  mod.rs  user_query.rs
src-tauri/src/utils/: constants.rs  events.rs  mod.rs
src/routes/: +layout.svelte  +page.svelte
(+56 files in other folders)
