[package]
name = "cod"
version = "0.1.0"
description = "Your personal financial companion — track, plan, and grow with confidence."
authors = ["codcax"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cod_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = { version = "6" }
dotenvy = { version = "0.15" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = { version = "2" }
tokio = { version = "1.43.0" }
num-traits = { version = "0.2", features = ["std"] }
rand = { version = "0.9" }
chrono = { version = "0.4" }
anyhow = { version = "1" }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
log = { version = "0.4" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
argon2 = { version = "0.5", features = ["std"] }
regex = { version = "1" }
once_cell = { version = "1.20.3" }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
